Fix filter wrapping on Safari

--- a/ui/src/app/components/results/results.component.scss
+++ b/ui/src/app/components/results/results.component.scss
@@ -27,6 +27,10 @@
     .filter-section {
         width: 100px;
         margin-right: 10px;
+
+        select {
+            word-wrap: initial;
+        }
     }
 }
 
